--- a/app/src/main/res/values-es/self_destruct_time.xml
+++ b/app/src/main/res/values-es/self_destruct_time.xml
@@ -9,4 +9,11 @@
     <string name="text_every_twenty_four_hours">24 horas</string>
     <string name="text_info_message_self_destruction">Los mensajes enviados y recibidos en esta conversación seran eliminados después del tiempo seleccionado.</string>
     <string name="text_every_seven_days">7 días</string>
+    <string name="text_every_five_seconds">5 segundos</string>
+    <string name="text_every_fifteen_seconds">15 segundos</string>
+    <string name="text_every_thirty_seconds">30 segundos</string>
+    <string name="text_every_one_minute">1 minuto</string>
+    <string name="text_every_ten_minutes">10 minutes</string>
+    <string name="text_every_twelve_hours">12 horas</string>
+    <string name="text_every_one_day">1 día</string>
 </resources>
