--- a/app/src/main/res/values/self_destruct_time.xml
+++ b/app/src/main/res/values/self_destruct_time.xml
@@ -8,5 +8,12 @@
     <string name="text_every_six_hours">6 hours</string>
     <string name="text_every_twenty_four_hours">24 hours</string>
     <string name="text_info_message_self_destruction">Messages sent and received in this conversation will be deleted after the selected time.</string>
-    <string name="text_every_seven_days">7 días</string>
+    <string name="text_every_seven_days">7 days</string>
+    <string name="text_every_five_seconds">5 seconds</string>
+    <string name="text_every_fifteen_seconds">15 seconds</string>
+    <string name="text_every_thirty_seconds">30 seconds</string>
+    <string name="text_every_one_minute">1 minute</string>
+    <string name="text_every_ten_minutes">10 minutes</string>
+    <string name="text_every_twelve_hours">12 hours</string>
+    <string name="text_every_one_day">1 day</string>
 </resources>
