--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name" translatable="false">NapoleoN</string>
     <string name="label_nickname" translatable="false">\@%1$s</string>
     <string name="text_power_by" translatable="false">Powered by</string>
@@ -13,6 +13,7 @@
     <string name="text_napoleon_secret_chat" translatable="false">NapoleoN Secret Chat</string>
     <string name="text_duration_and_size" translatable="false">%1$s - %2$s</string>
     <string name="transition_name_gallery_thumbnail" translatable="false">gallery_item_thumbnail_%1$d</string>
+    <string name="com.crashlytics.useFirebaseAppId" tools:ignore="ExtraTranslation">true</string>
 
     <string name="text_accept">Accept</string>
     <string name="text_cancel">Cancel</string>
