--- a/app/src/main/res/values-pt/recovery_account.xml
+++ b/app/src/main/res/values-pt/recovery_account.xml
@@ -8,4 +8,6 @@
     <string name="text_placeholder_password">Digite sua senha</string>
     <string name="text_description_enter_password">Digite sua senha. Você está a um passo de recuperar sua conta. Digite o número da senha de recuperação da sua conta.</string>
     <string name="text_description_validate_old_answers">Questões de segurança. Você está mais perto de recuperar sua conta. Ajude-nos a confirmar sua identidade. Responda às seguintes perguntas de segurança corretamente</string>
+    <string name="text_password_incorrect">A senha digitada está incorreta</string>
+    <string name="text_answers_incorrect">As respostas inseridas estão incorretas.</string>
 </resources>
