--- a/app/src/main/res/layout/validate_password_previous_recovery_account_fragment.xml
+++ b/app/src/main/res/layout/validate_password_previous_recovery_account_fragment.xml
@@ -62,7 +62,7 @@
                         android:layout_marginTop="@dimen/normal_margin"
                         android:hint="@string/text_placeholder_password"
                         app:passwordToggleEnabled="true"
-                        app:layout_constraintBottom_toTopOf="@+id/viewSwitcher_Progress_recovery"
+                        app:layout_constraintBottom_toTopOf="@+id/viewSwitcher_recovery_account"
                         app:layout_constraintEnd_toEndOf="@id/guideline_end"
                         app:layout_constraintStart_toStartOf="@id/guideline_start"
                         app:layout_constraintTop_toBottomOf="@id/textView_description">
@@ -79,39 +79,25 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <ViewSwitcher
-                        android:id="@+id/viewSwitcher_Progress_recovery"
+                        android:id="@+id/viewSwitcher_recovery_account"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/normal_margin"
                         app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
                         app:layout_constraintEnd_toEndOf="@id/guideline_end"
                         app:layout_constraintStart_toStartOf="@id/guideline_start"
-                        app:layout_constraintTop_toBottomOf="@id/textInputLayout_password">
+                        app:layout_constraintWidth_percent="@dimen/width_app_button">
 
-                        <androidx.constraintlayout.widget.ConstraintLayout
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/button_recovery_account"
+                            style="@style/AppPrimaryButton"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <com.google.android.material.button.MaterialButton
-                                android:id="@+id/button_recovery_account"
-                                style="@style/AppPrimaryButton"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:enabled="false"
-                                android:text="@string/text_btn_recovery"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent"
-                                app:layout_constraintWidth_percent="@dimen/width_app_button" />
-
-                        </androidx.constraintlayout.widget.ConstraintLayout>
+                            android:layout_height="wrap_content"
+                            android:enabled="false"
+                            android:text="@string/text_btn_recovery" />
 
                         <ProgressBar
-                            android:id="@+id/progressBar"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center" />
-
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
                     </ViewSwitcher>
 
                     <androidx.constraintlayout.widget.Guideline
