--- a/app/src/main/res/values-es/general.xml
+++ b/app/src/main/res/values-es/general.xml
@@ -40,5 +40,6 @@
     <string name="text_title_delete_conversation">Eliminar conversación</string>
     <string name="text_block_contact">Bloquear contacto</string>
     <string name="text_attachment_document_name">Documento.%1$s</string>
+    <string name="text_alert_failure">Advertencia</string>
 
 </resources>
