--- a/app/src/main/res/values-fr/recovery_account.xml
+++ b/app/src/main/res/values-fr/recovery_account.xml
@@ -8,4 +8,6 @@
     <string name="text_placeholder_password">Entrez votre mot de passe</string>
     <string name="text_description_enter_password">Saisissez votre mot de passe. Vous êtes à un pas de récupérer votre compte. Entrez votre numéro de mot de passe de récupération de compte.</string>
     <string name="text_description_validate_old_answers">Questions de sécurité. Vous êtes plus près de récupérer votre compte, veuillez nous aider à confirmer votre identité. Répondez correctement aux questions de sécurité suivantes</string>
+    <string name="text_password_incorrect">Le mot de passe saisi est incorrect</string>
+    <string name="text_answers_incorrect">Les réponses saisies sont incorrectes.</string>
 </resources>
