--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -55,5 +55,6 @@
     <string name="text_title_delete_conversation">Delete conversation</string>
     <string name="text_block_contact">Block contact</string>
     <string name="text_attachment_document_name">Document.%1$s</string>
+    <string name="text_alert_failure">Advertencia</string>
 
 </resources>
