--- a/app/src/main/res/menu/menu_block_contact.xml
+++ b/app/src/main/res/menu/menu_block_contact.xml
@@ -4,5 +4,5 @@
         android:title="@string/text_view_profile"/>
 
     <item android:id="@+id/unblock"
-        android:title="@string/unblock_contact"/>
+        android:title="@string/text_unblock_contact"/>
 </menu>
