--- a/app/src/main/res/values-es/general.xml
+++ b/app/src/main/res/values-es/general.xml
@@ -40,5 +40,5 @@
     <string name="text_title_delete_conversation">Eliminar conversación</string>
     <string name="text_block_contact">Bloquear contacto</string>
     <string name="text_attachment_document_name">Documento.%1$s</string>
-
+    <string name="text_status_limit">Se permiten 4 estados personalizados, borra uno previamente guardado para agregar uno nuevo.</string>
 </resources>
