--- a/app/src/main/res/layout/blocked_contacts_item.xml
+++ b/app/src/main/res/layout/blocked_contacts_item.xml
@@ -57,7 +57,7 @@
             android:ellipsize="end"
             android:lines="1"
             app:nickname="@{contact}"
-            android:textColor="@color/colorPrimary"
+            android:textColor="?attr/attrColorButtonTint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/button_more"
             app:layout_constraintHorizontal_bias="0.5"
