--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -71,10 +71,10 @@
                 app:layout_constraintTop_toBottomOf="@id/container_subscription">
 
                 <TextView
+                    android:id="@+id/textView_status"
                     style="@style/BodyTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/text_status_available"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
