--- a/app/src/main/res/layout/status_fragment_item.xml
+++ b/app/src/main/res/layout/status_fragment_item.xml
@@ -25,11 +25,23 @@
             style="@style/BodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button_more"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:status="@{status}"
             tools:text="Hola mundo.com" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/button_more"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:tint="@color/colorSecondaryDark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:statusImage="@{status}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_more_vert_black" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
