--- a/app/src/main/res/values-fr/status.xml
+++ b/app/src/main/res/values-fr/status.xml
@@ -10,4 +10,6 @@
     <string name="text_status_sleeping">En train de dormir</string>
     <string name="text_status_only_emergency">Seulement d\'urgence</string>
     <string name="text_error_getting_local_status">Une erreur s\'est produite lors de l\'obtention des états, essayez à nouveau</string>
+    <string name="text_delete_status">Supprimer l\'état</string>
+
 </resources>
