--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -43,4 +43,5 @@
         <item quantity="one">%d selecionado</item>
         <item quantity="other">%d selecionado</item>
     </plurals>
+    <string name="text_status_limit">São permitidos 4 estados personalizados; exclua um salvo anteriormente para adicionar um novo.</string>
 </resources>
