--- a/app/src/main/res/layout/emoji_keyboard_page_fragment_item.xml
+++ b/app/src/main/res/layout/emoji_keyboard_page_fragment_item.xml
@@ -5,7 +5,7 @@
     <data>
     </data>
 
-    <androidx.emoji.widget.EmojiAppCompatTextView
+    <androidx.emoji.widget.EmojiTextView
         android:id="@+id/textView_emoji"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,7 +13,5 @@
         android:textColor="@color/colorPrimary"
         android:textAlignment="center"
         android:gravity="center"
-        tools:text="😎">
-
-    </androidx.emoji.widget.EmojiAppCompatTextView>
+        tools:text="😎" />
 </layout>
